--- a/rt-ac58u.config
+++ b/rt-ac58u.config
@@ -364,6 +364,7 @@ CONFIG_PACKAGE_busybox=y
 CONFIG_BUSYBOX_DEFAULT_HAVE_DOT_CONFIG=y
 # CONFIG_BUSYBOX_DEFAULT_DESKTOP is not set
 # CONFIG_BUSYBOX_DEFAULT_EXTRA_COMPAT is not set
+# CONFIG_BUSYBOX_DEFAULT_FEDORA_COMPAT is not set
 CONFIG_BUSYBOX_DEFAULT_INCLUDE_SUSv2=y
 # CONFIG_BUSYBOX_DEFAULT_USE_PORTABLE_CODE is not set
 CONFIG_BUSYBOX_DEFAULT_PLATFORM_LINUX=y
@@ -427,7 +428,6 @@ CONFIG_BUSYBOX_DEFAULT_MD5_SMALL=1
 CONFIG_BUSYBOX_DEFAULT_SHA3_SMALL=1
 CONFIG_BUSYBOX_DEFAULT_FEATURE_FAST_TOP=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_ETC_NETWORKS is not set
-# CONFIG_BUSYBOX_DEFAULT_FEATURE_USE_TERMIOS is not set
 CONFIG_BUSYBOX_DEFAULT_FEATURE_EDITING=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_EDITING_MAX_LEN=512
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_EDITING_VI is not set
@@ -480,6 +480,7 @@ CONFIG_BUSYBOX_DEFAULT_BZCAT=y
 # CONFIG_BUSYBOX_DEFAULT_XZCAT is not set
 # CONFIG_BUSYBOX_DEFAULT_XZ is not set
 # CONFIG_BUSYBOX_DEFAULT_BZIP2 is not set
+CONFIG_BUSYBOX_DEFAULT_FEATURE_BZIP2_DECOMPRESS=y
 # CONFIG_BUSYBOX_DEFAULT_CPIO is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_CPIO_O is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_CPIO_P is not set
@@ -489,6 +490,7 @@ CONFIG_BUSYBOX_DEFAULT_GZIP=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_GZIP_LONG_OPTIONS is not set
 CONFIG_BUSYBOX_DEFAULT_GZIP_FAST=0
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_GZIP_LEVELS is not set
+CONFIG_BUSYBOX_DEFAULT_FEATURE_GZIP_DECOMPRESS=y
 # CONFIG_BUSYBOX_DEFAULT_LZOP is not set
 # CONFIG_BUSYBOX_DEFAULT_UNLZOP is not set
 # CONFIG_BUSYBOX_DEFAULT_LZOPCAT is not set
@@ -508,10 +510,13 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_GNU_EXTENSIONS=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_NOPRESERVE_TIME is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TAR_SELINUX is not set
 # CONFIG_BUSYBOX_DEFAULT_UNZIP is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_UNZIP_CDF is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_UNZIP_BZIP2 is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_UNZIP_LZMA is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_UNZIP_XZ is not set
 CONFIG_BUSYBOX_DEFAULT_BASENAME=y
-# CONFIG_BUSYBOX_DEFAULT_CAL is not set
 CONFIG_BUSYBOX_DEFAULT_CAT=y
-# CONFIG_BUSYBOX_DEFAULT_CATV is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_CATV is not set
 CONFIG_BUSYBOX_DEFAULT_CHGRP=y
 CONFIG_BUSYBOX_DEFAULT_CHMOD=y
 CONFIG_BUSYBOX_DEFAULT_CHOWN=y
@@ -548,6 +553,7 @@ CONFIG_BUSYBOX_DEFAULT_ENV=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_UNEXPAND_LONG_OPTIONS is not set
 CONFIG_BUSYBOX_DEFAULT_EXPR=y
 CONFIG_BUSYBOX_DEFAULT_EXPR_MATH_SUPPORT_64=y
+# CONFIG_BUSYBOX_DEFAULT_FACTOR is not set
 CONFIG_BUSYBOX_DEFAULT_FALSE=y
 # CONFIG_BUSYBOX_DEFAULT_FOLD is not set
 CONFIG_BUSYBOX_DEFAULT_FSYNC=y
@@ -558,12 +564,14 @@ CONFIG_BUSYBOX_DEFAULT_ID=y
 # CONFIG_BUSYBOX_DEFAULT_GROUPS is not set
 # CONFIG_BUSYBOX_DEFAULT_INSTALL is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_INSTALL_LONG_OPTIONS is not set
+# CONFIG_BUSYBOX_DEFAULT_LINK is not set
 CONFIG_BUSYBOX_DEFAULT_LN=y
 # CONFIG_BUSYBOX_DEFAULT_LOGNAME is not set
 CONFIG_BUSYBOX_DEFAULT_LS=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_LS_FILETYPES=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_LS_FOLLOWLINKS=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_LS_RECURSIVE=y
+CONFIG_BUSYBOX_DEFAULT_FEATURE_LS_WIDTH=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_LS_SORTFILES=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_LS_TIMESTAMPS=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_LS_USERNAME=y
@@ -582,8 +590,11 @@ CONFIG_BUSYBOX_DEFAULT_MKNOD=y
 CONFIG_BUSYBOX_DEFAULT_MV=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_MV_LONG_OPTIONS is not set
 CONFIG_BUSYBOX_DEFAULT_NICE=y
+# CONFIG_BUSYBOX_DEFAULT_NL is not set
 # CONFIG_BUSYBOX_DEFAULT_NOHUP is not set
+# CONFIG_BUSYBOX_DEFAULT_NPROC is not set
 # CONFIG_BUSYBOX_DEFAULT_OD is not set
+# CONFIG_BUSYBOX_DEFAULT_PASTE is not set
 # CONFIG_BUSYBOX_DEFAULT_PRINTENV is not set
 CONFIG_BUSYBOX_DEFAULT_PRINTF=y
 CONFIG_BUSYBOX_DEFAULT_PWD=y
@@ -594,6 +605,7 @@ CONFIG_BUSYBOX_DEFAULT_RM=y
 CONFIG_BUSYBOX_DEFAULT_RMDIR=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_RMDIR_LONG_OPTIONS is not set
 CONFIG_BUSYBOX_DEFAULT_SEQ=y
+# CONFIG_BUSYBOX_DEFAULT_SHRED is not set
 # CONFIG_BUSYBOX_DEFAULT_SHUF is not set
 CONFIG_BUSYBOX_DEFAULT_SLEEP=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_FANCY_SLEEP=y
@@ -638,12 +650,12 @@ CONFIG_BUSYBOX_DEFAULT_UNIQ=y
 CONFIG_BUSYBOX_DEFAULT_WC=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_WC_LARGE is not set
 # CONFIG_BUSYBOX_DEFAULT_WHO is not set
+# CONFIG_BUSYBOX_DEFAULT_W is not set
 # CONFIG_BUSYBOX_DEFAULT_USERS is not set
 # CONFIG_BUSYBOX_DEFAULT_WHOAMI is not set
 CONFIG_BUSYBOX_DEFAULT_YES=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_VERBOSE is not set
 CONFIG_BUSYBOX_DEFAULT_FEATURE_PRESERVE_HARDLINKS=y
-CONFIG_BUSYBOX_DEFAULT_FEATURE_AUTOWIDTH=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_HUMAN_READABLE=y
 # CONFIG_BUSYBOX_DEFAULT_CHVT is not set
 CONFIG_BUSYBOX_DEFAULT_CLEAR=y
@@ -753,7 +765,7 @@ CONFIG_BUSYBOX_DEFAULT_TELINIT_PATH=""
 CONFIG_BUSYBOX_DEFAULT_FEATURE_KILL_DELAY=0
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_INIT_SCTTY is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_INIT_SYSLOG is not set
-# CONFIG_BUSYBOX_DEFAULT_FEATURE_EXTRA_QUIET is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_INIT_QUIET is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_INIT_COREDUMPS is not set
 CONFIG_BUSYBOX_DEFAULT_INIT_TERMINAL_TYPE=""
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_INIT_MODIFY_CMDLINE is not set
@@ -793,6 +805,7 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_PASSWD_WEAK_CHECK=y
 # CONFIG_BUSYBOX_DEFAULT_SU is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_SU_SYSLOG is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_SU_CHECKS_SHELLS is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_SU_BLANK_PW_NEEDS_SECURE_TTY is not set
 # CONFIG_BUSYBOX_DEFAULT_SULOGIN is not set
 # CONFIG_BUSYBOX_DEFAULT_VLOCK is not set
 # CONFIG_BUSYBOX_DEFAULT_CHATTR is not set
@@ -805,19 +818,19 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_PASSWD_WEAK_CHECK=y
 # CONFIG_BUSYBOX_DEFAULT_LSMOD is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_LSMOD_PRETTY_2_6_OUTPUT is not set
 # CONFIG_BUSYBOX_DEFAULT_MODINFO is not set
-# CONFIG_BUSYBOX_DEFAULT_FEATURE_MODPROBE_SMALL_OPTIONS_ON_CMDLINE is not set
-# CONFIG_BUSYBOX_DEFAULT_FEATURE_MODPROBE_SMALL_CHECK_ALREADY_LOADED is not set
 # CONFIG_BUSYBOX_DEFAULT_MODPROBE is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_MODPROBE_BLACKLIST is not set
 # CONFIG_BUSYBOX_DEFAULT_RMMOD is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_CMDLINE_MODULE_OPTIONS is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_MODPROBE_SMALL_CHECK_ALREADY_LOADED is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_2_4_MODULES is not set
-# CONFIG_BUSYBOX_DEFAULT_FEATURE_INSMOD_TRY_MMAP is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_INSMOD_VERSION_CHECKING is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_INSMOD_KSYMOOPS_SYMBOLS is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_INSMOD_LOADINKMEM is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_INSMOD_LOAD_MAP is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_INSMOD_LOAD_MAP_FULL is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_CHECK_TAINTED_MODULE is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_INSMOD_TRY_MMAP is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_MODUTILS_ALIAS is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_MODUTILS_SYMBOLS is not set
 CONFIG_BUSYBOX_DEFAULT_DEFAULT_MODULES_DIR=""
@@ -828,8 +841,10 @@ CONFIG_BUSYBOX_DEFAULT_DEFAULT_DEPMOD_FILE=""
 # CONFIG_BUSYBOX_DEFAULT_BLKID is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_BLKID_TYPE is not set
 # CONFIG_BUSYBOX_DEFAULT_BLOCKDEV is not set
+# CONFIG_BUSYBOX_DEFAULT_CAL is not set
 CONFIG_BUSYBOX_DEFAULT_DMESG=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_DMESG_PRETTY=y
+# CONFIG_BUSYBOX_DEFAULT_FALLOCATE is not set
 # CONFIG_BUSYBOX_DEFAULT_FATATTR is not set
 # CONFIG_BUSYBOX_DEFAULT_FBSET is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_FBSET_FANCY is not set
@@ -849,12 +864,14 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_DMESG_PRETTY=y
 # CONFIG_BUSYBOX_DEFAULT_FDFLUSH is not set
 # CONFIG_BUSYBOX_DEFAULT_FREERAMDISK is not set
 # CONFIG_BUSYBOX_DEFAULT_FSCK_MINIX is not set
+# CONFIG_BUSYBOX_DEFAULT_FSFREEZE is not set
 # CONFIG_BUSYBOX_DEFAULT_FSTRIM is not set
 # CONFIG_BUSYBOX_DEFAULT_GETOPT is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_GETOPT_LONG is not set
 CONFIG_BUSYBOX_DEFAULT_HEXDUMP=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_HEXDUMP_REVERSE is not set
 # CONFIG_BUSYBOX_DEFAULT_HD is not set
+# CONFIG_BUSYBOX_DEFAULT_XXD is not set
 CONFIG_BUSYBOX_DEFAULT_HWCLOCK=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_HWCLOCK_LONG_OPTIONS is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_HWCLOCK_ADJTIME_FHS is not set
@@ -902,6 +919,7 @@ CONFIG_BUSYBOX_DEFAULT_PIVOT_ROOT=y
 # CONFIG_BUSYBOX_DEFAULT_SETARCH is not set
 # CONFIG_BUSYBOX_DEFAULT_LINUX32 is not set
 # CONFIG_BUSYBOX_DEFAULT_LINUX64 is not set
+# CONFIG_BUSYBOX_DEFAULT_SETPRIV is not set
 # CONFIG_BUSYBOX_DEFAULT_SWAPON is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_SWAPON_DISCARD is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_SWAPON_PRI is not set
@@ -1001,6 +1019,7 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_LESS_MAXLINES=9999999
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_LESS_DASHCMD is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_LESS_LINENUMS is not set
 CONFIG_BUSYBOX_DEFAULT_LOCK=y
+# CONFIG_BUSYBOX_DEFAULT_LSSCSI is not set
 # CONFIG_BUSYBOX_DEFAULT_MAKEDEVS is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_MAKEDEVS_LEAF is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_MAKEDEVS_TABLE is not set
@@ -1010,6 +1029,7 @@ CONFIG_BUSYBOX_DEFAULT_LOCK=y
 # CONFIG_BUSYBOX_DEFAULT_MT is not set
 # CONFIG_BUSYBOX_DEFAULT_NANDWRITE is not set
 # CONFIG_BUSYBOX_DEFAULT_NANDDUMP is not set
+# CONFIG_BUSYBOX_DEFAULT_PARTPROBE is not set
 # CONFIG_BUSYBOX_DEFAULT_RAIDAUTORUN is not set
 # CONFIG_BUSYBOX_DEFAULT_READAHEAD is not set
 # CONFIG_BUSYBOX_DEFAULT_RFKILL is not set
@@ -1120,6 +1140,7 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_NETSTAT_WIDE=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_NETSTAT_PRG=y
 # CONFIG_BUSYBOX_DEFAULT_NSLOOKUP is not set
 CONFIG_BUSYBOX_DEFAULT_NSLOOKUP_LEDE=y
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_NSLOOKUP_LEDE_LONG_OPTIONS is not set
 CONFIG_BUSYBOX_DEFAULT_NTPD=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_NTPD_SERVER=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_NTPD_CONF is not set
@@ -1129,11 +1150,13 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_FANCY_PING=y
 # CONFIG_BUSYBOX_DEFAULT_PSCAN is not set
 CONFIG_BUSYBOX_DEFAULT_ROUTE=y
 # CONFIG_BUSYBOX_DEFAULT_SLATTACH is not set
+# CONFIG_BUSYBOX_DEFAULT_SSL_CLIENT is not set
 # CONFIG_BUSYBOX_DEFAULT_TCPSVD is not set
 # CONFIG_BUSYBOX_DEFAULT_UDPSVD is not set
 # CONFIG_BUSYBOX_DEFAULT_TELNET is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TELNET_TTYPE is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TELNET_AUTOLOGIN is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_TELNET_WIDTH is not set
 # CONFIG_BUSYBOX_DEFAULT_TELNETD is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TELNETD_STANDALONE is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TELNETD_INETD_WAIT is not set
@@ -1144,6 +1167,7 @@ CONFIG_BUSYBOX_DEFAULT_ROUTE=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TFTP_BLOCKSIZE is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TFTP_PROGRESS_BAR is not set
 # CONFIG_BUSYBOX_DEFAULT_TFTP_DEBUG is not set
+# CONFIG_BUSYBOX_DEFAULT_TLS is not set
 CONFIG_BUSYBOX_DEFAULT_TRACEROUTE=y
 CONFIG_BUSYBOX_DEFAULT_TRACEROUTE6=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_TRACEROUTE_VERBOSE=y
@@ -1156,17 +1180,20 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_TRACEROUTE_VERBOSE=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_WGET_AUTHENTICATION is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_WGET_LONG_OPTIONS is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_WGET_TIMEOUT is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_WGET_HTTPS is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_WGET_OPENSSL is not set
-# CONFIG_BUSYBOX_DEFAULT_FEATURE_WGET_SSL_HELPER is not set
 # CONFIG_BUSYBOX_DEFAULT_WHOIS is not set
 # CONFIG_BUSYBOX_DEFAULT_ZCIP is not set
 # CONFIG_BUSYBOX_DEFAULT_UDHCPC6 is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_UDHCPC6_RFC3646 is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_UDHCPC6_RFC4704 is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_UDHCPC6_RFC4833 is not set
 # CONFIG_BUSYBOX_DEFAULT_UDHCPD is not set
-# CONFIG_BUSYBOX_DEFAULT_DHCPRELAY is not set
-# CONFIG_BUSYBOX_DEFAULT_DUMPLEASES is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_UDHCPD_WRITE_LEASES_EARLY is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_UDHCPD_BASE_IP_ON_MAC is not set
 CONFIG_BUSYBOX_DEFAULT_DHCPD_LEASES_FILE=""
+# CONFIG_BUSYBOX_DEFAULT_DUMPLEASES is not set
+# CONFIG_BUSYBOX_DEFAULT_DHCPRELAY is not set
 CONFIG_BUSYBOX_DEFAULT_UDHCPC=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_UDHCPC_ARPING is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_UDHCPC_SANITIZEOPT is not set
@@ -1203,6 +1230,7 @@ CONFIG_BUSYBOX_DEFAULT_PIDOF=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_PIDOF_OMIT is not set
 # CONFIG_BUSYBOX_DEFAULT_PMAP is not set
 # CONFIG_BUSYBOX_DEFAULT_POWERTOP is not set
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_POWERTOP_INTERACTIVE is not set
 CONFIG_BUSYBOX_DEFAULT_PS=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_PS_WIDE=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_PS_LONG is not set
@@ -1215,6 +1243,7 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_PS_WIDE=y
 # CONFIG_BUSYBOX_DEFAULT_SMEMCAP is not set
 CONFIG_BUSYBOX_DEFAULT_BB_SYSCTL=y
 CONFIG_BUSYBOX_DEFAULT_TOP=y
+# CONFIG_BUSYBOX_DEFAULT_FEATURE_TOP_INTERACTIVE is not set
 CONFIG_BUSYBOX_DEFAULT_FEATURE_TOP_CPU_USAGE_PERCENTAGE=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_TOP_CPU_GLOBAL_PERCENTS=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_TOP_SMP_CPU is not set
@@ -1261,19 +1290,19 @@ CONFIG_BUSYBOX_DEFAULT_BASH_IS_NONE=y
 CONFIG_BUSYBOX_DEFAULT_ASH=y
 # CONFIG_BUSYBOX_DEFAULT_ASH_OPTIMIZE_FOR_SIZE is not set
 CONFIG_BUSYBOX_DEFAULT_ASH_INTERNAL_GLOB=y
-# CONFIG_BUSYBOX_DEFAULT_ASH_RANDOM_SUPPORT is not set
-CONFIG_BUSYBOX_DEFAULT_ASH_EXPAND_PRMT=y
 CONFIG_BUSYBOX_DEFAULT_ASH_BASH_COMPAT=y
-# CONFIG_BUSYBOX_DEFAULT_ASH_IDLE_TIMEOUT is not set
 CONFIG_BUSYBOX_DEFAULT_ASH_JOB_CONTROL=y
 CONFIG_BUSYBOX_DEFAULT_ASH_ALIAS=y
-CONFIG_BUSYBOX_DEFAULT_ASH_GETOPTS=y
-CONFIG_BUSYBOX_DEFAULT_ASH_BUILTIN_ECHO=y
-CONFIG_BUSYBOX_DEFAULT_ASH_BUILTIN_PRINTF=y
-CONFIG_BUSYBOX_DEFAULT_ASH_BUILTIN_TEST=y
-# CONFIG_BUSYBOX_DEFAULT_ASH_HELP is not set
-CONFIG_BUSYBOX_DEFAULT_ASH_CMDCMD=y
+# CONFIG_BUSYBOX_DEFAULT_ASH_RANDOM_SUPPORT is not set
+CONFIG_BUSYBOX_DEFAULT_ASH_EXPAND_PRMT=y
+# CONFIG_BUSYBOX_DEFAULT_ASH_IDLE_TIMEOUT is not set
 # CONFIG_BUSYBOX_DEFAULT_ASH_MAIL is not set
+CONFIG_BUSYBOX_DEFAULT_ASH_ECHO=y
+CONFIG_BUSYBOX_DEFAULT_ASH_PRINTF=y
+CONFIG_BUSYBOX_DEFAULT_ASH_TEST=y
+# CONFIG_BUSYBOX_DEFAULT_ASH_HELP is not set
+CONFIG_BUSYBOX_DEFAULT_ASH_GETOPTS=y
+CONFIG_BUSYBOX_DEFAULT_ASH_CMDCMD=y
 # CONFIG_BUSYBOX_DEFAULT_CTTYHACK is not set
 # CONFIG_BUSYBOX_DEFAULT_HUSH is not set
 # CONFIG_BUSYBOX_DEFAULT_HUSH_BASH_COMPAT is not set
@@ -1289,8 +1318,22 @@ CONFIG_BUSYBOX_DEFAULT_ASH_CMDCMD=y
 # CONFIG_BUSYBOX_DEFAULT_HUSH_FUNCTIONS is not set
 # CONFIG_BUSYBOX_DEFAULT_HUSH_LOCAL is not set
 # CONFIG_BUSYBOX_DEFAULT_HUSH_RANDOM_SUPPORT is not set
-# CONFIG_BUSYBOX_DEFAULT_HUSH_EXPORT_N is not set
 # CONFIG_BUSYBOX_DEFAULT_HUSH_MODE_X is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_ECHO is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_PRINTF is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_TEST is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_EXPORT is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_EXPORT_N is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_KILL is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_WAIT is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_TRAP is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_TYPE is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_READ is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_SET is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_UNSET is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_ULIMIT is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_UMASK is not set
+# CONFIG_BUSYBOX_DEFAULT_HUSH_MEMLEAK is not set
 # CONFIG_BUSYBOX_DEFAULT_MSH is not set
 CONFIG_BUSYBOX_DEFAULT_FEATURE_SH_MATH=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_SH_MATH_64=y
@@ -2419,7 +2462,7 @@ CONFIG_PACKAGE_lua=y
 #
 # CONFIG_PACKAGE_libacl is not set
 # CONFIG_PACKAGE_libattr is not set
-# CONFIG_PACKAGE_libext2fs is not set
+CONFIG_PACKAGE_libext2fs=y
 # CONFIG_PACKAGE_libfuse is not set
 # CONFIG_PACKAGE_libow is not set
 # CONFIG_PACKAGE_libow-capi is not set
@@ -2678,7 +2721,7 @@ CONFIG_OPENSSL_WITH_SRP=y
 # CONFIG_PACKAGE_libavahi-nodbus-support is not set
 # CONFIG_PACKAGE_libavl is not set
 # CONFIG_PACKAGE_libbfd is not set
-# CONFIG_PACKAGE_libblkid is not set
+CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libblobmsg-json=y
 # CONFIG_PACKAGE_libcanfestival is not set
 CONFIG_PACKAGE_libcap=y
@@ -2735,7 +2778,7 @@ CONFIG_PACKAGE_libcap=y
 # CONFIG_PACKAGE_libgdbm is not set
 # CONFIG_PACKAGE_libgee is not set
 # CONFIG_PACKAGE_libglpk is not set
-# CONFIG_PACKAGE_libfdisk is not set
+CONFIG_PACKAGE_libfdisk=y
 # CONFIG_PACKAGE_libgmp is not set
 # CONFIG_PACKAGE_libgnurl is not set
 # CONFIG_PACKAGE_libgpg-error is not set
@@ -2785,7 +2828,7 @@ CONFIG_PACKAGE_liblua=y
 # CONFIG_PACKAGE_libmysqlclient is not set
 # CONFIG_PACKAGE_libmysqlclient-r is not set
 # CONFIG_PACKAGE_libnatpmp is not set
-# CONFIG_PACKAGE_libncurses is not set
+CONFIG_PACKAGE_libncurses=y
 # CONFIG_PACKAGE_libndpi is not set
 # CONFIG_PACKAGE_libneon is not set
 # CONFIG_PACKAGE_libnet-1.2.x is not set
@@ -2853,7 +2896,7 @@ CONFIG_PACKAGE_libnl-tiny=y
 # CONFIG_PACKAGE_libshout-full is not set
 # CONFIG_PACKAGE_libshout-nossl is not set
 # CONFIG_PACKAGE_libsigcxx is not set
-# CONFIG_PACKAGE_libsmartcols is not set
+CONFIG_PACKAGE_libsmartcols=y
 # CONFIG_PACKAGE_libsndfile is not set
 # CONFIG_PACKAGE_libsoc is not set
 # CONFIG_PACKAGE_libsocks is not set
@@ -2894,7 +2937,7 @@ CONFIG_PACKAGE_libuclient=y
 # CONFIG_PACKAGE_libustream-cyassl is not set
 # CONFIG_PACKAGE_libustream-mbedtls is not set
 # CONFIG_PACKAGE_libustream-openssl is not set
-# CONFIG_PACKAGE_libuuid is not set
+CONFIG_PACKAGE_libuuid=y
 # CONFIG_PACKAGE_libuv is not set
 # CONFIG_PACKAGE_libuvc is not set
 # CONFIG_PACKAGE_libv4l is not set
@@ -4124,7 +4167,7 @@ CONFIG_PACKAGE_uboot-envtools=y
 # CONFIG_PACKAGE_blkdiscard is not set
 # CONFIG_PACKAGE_blkid is not set
 # CONFIG_PACKAGE_cfdisk is not set
-# CONFIG_PACKAGE_fdisk is not set
+CONFIG_PACKAGE_fdisk=y
 # CONFIG_PACKAGE_findfs is not set
 # CONFIG_PACKAGE_hd-idle is not set
 # CONFIG_PACKAGE_hdparm is not set
@@ -4173,7 +4216,7 @@ CONFIG_PACKAGE_uboot-envtools=y
 # CONFIG_PACKAGE_dosfstools is not set
 # CONFIG_PACKAGE_dumpe2fs is not set
 # CONFIG_PACKAGE_e2freefrag is not set
-# CONFIG_PACKAGE_e2fsprogs is not set
+CONFIG_PACKAGE_e2fsprogs=y
 # CONFIG_PACKAGE_f2fs-tools is not set
 # CONFIG_PACKAGE_f2fsck is not set
 # CONFIG_PACKAGE_filefrag is not set
